New Sdv doublefetch rule and updates to driver security checklist for SDV rules (#846)
* Adding just new doublefetch rule as other topics are still being worked on

* Adding just new doublefetch rule as other topics are still being worked on

* Minor edits to new doublefetch rule

* Minor edits to new doublefetch rule

* Adding links to various SDV rules in security checklist topic

--- a/windows-driver-docs-pr/devtest/toc.yml
+++ b/windows-driver-docs-pr/devtest/toc.yml
@@ -820,6 +820,8 @@
           href: ddi-usage-rule-set--wdm-.md
         - name: "DebugBreakUsage"
           href: wdm-debugbreakusage.md
+        - name: "DoubleFetch"
+          href: wdm-doublefetch.md
         - name: "NullCheck"
           href: nullcheckw.md
         - name: "SafeStrings"
