Minor edits Add to TOC

--- a/windows-driver-docs-pr/display/toc.yml
+++ b/windows-driver-docs-pr/display/toc.yml
@@ -694,6 +694,8 @@
         href: iddcx1.4-updates-for-remote-idds.md
       - name: "Building IddCx v1.4 drivers"
         href: building-iddcx1.4-drivers.md
+    - name: "IddCx v1.6 updates"
+      href: iddcx1.6-updates.md
     - name: "EvtIddCxMonitorAssignSwapChain error handling"
       href: idd-evtiddcxmonitorassignswapchain-error-handling.md
     - name: "Debugging indirect display drivers"
