add draft get product by name API pg

--- a/windows-driver-docs-pr/dashboard/toc.yml
+++ b/windows-driver-docs-pr/dashboard/toc.yml
@@ -238,6 +238,8 @@
       href: get-all-products.md
     - name: "Get a product"
       href: get-a-product.md
+    - name: "Get a product by name"
+      href: get-a-product-by-name.md
     - name: "Get all submissions"
       href: get-all-submissions.md
     - name: "Get a submission"
