--- a/windows-driver-docs-pr/dashboard/toc.yml
+++ b/windows-driver-docs-pr/dashboard/toc.yml
@@ -34,6 +34,8 @@
         href: other-policies.md
       - name: "Extension INF Targeting Rules"
         href: extension-inf-targeting-rules.md
+      - name: "Driver Release Cadence"
+        href: driver-release-candence.md
     - name: "Microsoft driver measures"
       href: overview-of-microsoft-driver-measure-dictionary.md
     - name: "Driver measure attributes"
