Static Tools Logo Test update (codeql) (#836)
* new sdv rule

* fix toc

* test

* test

* new page

* toc

* toc

* toc

* toc

* toc

* toc test

* toc

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* test

* more

* table updates

* table

* format

* changes

* change

* center

* test

* more

* formatting

* formatting

* test

* test

* test

* test

* test

* replace semmle with codeql

* hlk

* test

* test

* test

* test

* test

* Edits - langauge and format

* Fixed build warnings and suggestion

* Edits to the new WDM doublefetch rule including meta data and in topic links

* Adding additional text that describes the double fetch in more detail

* Adding doublefetch rule to WDM rule topic

* remove query suite reference for now

* add a couple flags

* links

* remove future

* test

* change language

* test

* typo

* typo

* test

* test

* instructions

* test

* add a bit more motivation to convince ppl this is actually important

* add new must-fix

* test

* update

* test

* test

* test

* Starting work on command sequence based on testing

* Starting work on command sequence based on testing

* Starting work on command sequence based on testing

* Addtional work on the CodeQL security topic

* Addtional work on the CodeQL security topic

* Addtional work on the CodeQL security topic

* Addtional work on the CodeQL security topic

Co-authored-by: EliotSeattle <3382964+EliotSeattle@users.noreply.github.com>
Co-authored-by: Don Marshall <domars@microsoft.com>

--- a/windows-driver-docs-pr/devtest/toc.yml
+++ b/windows-driver-docs-pr/devtest/toc.yml
@@ -1802,7 +1802,7 @@
         - name: "PagedCode"
           href: storport-pagedcode.md
         - name: "StorPortStatusPending"
-          href: storport-storportstatuspending.md
+          href: storport-storportstatuspending.md  
   - name: "Static Driver Verifier"
 # Auto-expanded node
     items: 
@@ -1813,6 +1813,7 @@
     - name: "Static Driver Verifier commands (MSBuild)"
       href: -static-driver-verifier-commands--msbuild-.md
     - name: "Introducing Static Driver Verifier"
+      href: introducing-static-driver-verifier.md
 # Auto-expanded node
       items: 
       - name: "Introducing Static Driver Verifier"
@@ -1999,6 +2000,11 @@
           href: the-process-cannot-access-the-file---path---because-it-is-being-used-b.md
       - name: "Static Driver Verifier Diagnostics"
         href: static-driver-verifier-diagnostics.md
+  - name: "CodeQL and the Static Tools Logo Test"
+# Auto-expanded node
+    items: 
+    - name: "CodeQL and Static Tools Logo Test"
+      href: static-tools-and-codeql.md  
   - name: "WDF Verifier Control Application"
 # Auto-expanded node
     items: 
