This PR is to add the new UnsafeAllocatePool rules - wdf and kmdf to devtest (#919)
* Adding new sdv rules

* Updates to new sdv rules

* Adding new content to new memory rules.

* Adding new content to new memory rules.

* Adding new content to new memory rules.

* Adding new content to new memory rules.

* Edits for the new SDV memory rules.

* Edits for the new SDV memory rules.

* Edits for the new SDV memory rules.

* Edits for the new SDV memory rules.

--- a/windows-driver-docs-pr/devtest/toc.yml
+++ b/windows-driver-docs-pr/devtest/toc.yml
@@ -1171,6 +1171,8 @@
           href: wdm-pnpsamedeviceobject.md
         - name: "TargetRelationNeedsRef"
           href: wdm-targetrelationneedsref.md
+        - name: "UnSafeAllocatePool"
+          href: wdm-unsafeallocatepool.md
         - name: "ZwRegistryCreate"
           href: wdm-zwregistrycreate.md
         - name: "ZwRegistryOpen"
@@ -1374,6 +1376,8 @@
           href: kmdf-nonfdonotpowerpolicyownerapi.md
         - name: "NonPnPDrvPowerPolicyOwnerAPI"
           href: kmdf-nonpnpdrvpowerpolicyownerapi.md
+        - name: "UnSafeAllocatePool"
+          href: kmdf-unsafeallocatepool.md
       - name: "RequestProcessing rule set (KMDF)"
 # Auto-expanded node
         items: 
