--- a/windows-driver-docs-pr/bluetooth/toc.yml
+++ b/windows-driver-docs-pr/bluetooth/toc.yml
@@ -130,7 +130,7 @@
         href: testing-BTP-tests-battery.md
     - name: "BTP Diagnostic Tools"
       items:
-      - name: "Bluetooth ETL Parser"
+      - name: "Bluetooth ETL Parse"
         href: testing-BTP-tools-btetlparse.md
       - name: "Bluetooth Virtual Sniffer"
         href: testing-BTP-tools-btvs.md
